packages/styles/scss/components/footer/_footer-nav.scss
/**
 * Copyright IBM Corp. 2016, 2021
 *
 * This source code is licensed under the Apache-2.0 license found in the
 * LICENSE file in the root directory of this source tree.
 */

@import 'carbon-components/scss/components/accordion/accordion';

/// Footer nav styles
/// @access private
/// @group footer

@mixin footer-nav {
  :host(#{$dds-prefix}-footer-nav),
  .#{$prefix}--footer-nav {
    @include carbon--theme(
      $carbon--theme--g90,
      feature-flag-enabled('enable-css-custom-properties')
    ) {
      @include accordion;
      @include carbon--make-col-ready;

      padding: 0;
      order: 1;

      @include carbon--breakpoint('md') {
        border-top: 1px solid $ui-03;
        padding: 0 $carbon--grid-gutter / 2;
      }

      @include carbon--breakpoint-between('md', 'lg') {
        padding-top: carbon--mini-units(2);
      }

      @include carbon--breakpoint('lg') {
        padding-top: $spacing-05;
        @include carbon--make-col(12, 16);
        @include carbon--make-col-offset(4, 16);
      }

      .#{$prefix}--accordion__heading {
        display: flex;
        align-items: center;
        min-height: $carbon--spacing-09;
        padding: 0;
      }
    }
  }

  :host(#{$dds-prefix}-footer-nav[disable-locale-button]),
  nav.#{$prefix}--footer-nav__locale-button--disabled {
    border-top: none;
    @include carbon--breakpoint('lg') {
      padding-top: 0;
      @include carbon--make-col-offset(2, 16);
    }
  }

  .#{$prefix}--footer-nav__container {
    @include carbon--breakpoint('md') {
      @include carbon--make-row;

      display: block;
      column-count: 2;
      column-gap: $carbon--grid-gutter;
      margin-left: 0;
      margin-right: 0;
    }

    @include carbon--breakpoint('lg') {
      column-count: 3;
      column-gap: $carbon--grid-gutter;
    }
  }

  :host(#{$dds-prefix}-footer[size='short'])
    ::slotted(#{$dds-prefix}-footer-nav),
  .#{$prefix}--footer--short .#{$prefix}--footer-nav {
    display: none;
  }
}

@include exports('footer-nav') {
  @include footer-nav;
}

