fix(footer v1):v1 title was not showing in 672 breakpoint (#11409)
### Related Ticket(s)

[ADCMS-4397](https://jsw.ibm.com/browse/ADCMS-4397)

### Description

As per another [PR submitted](https://github.com/carbon-design-system/carbon-for-ibm-dotcom/pull/11396) for this fix, I'm also submitting this one targeting v1.

Titles for the Footer Group Navs were not being displayed specifically in 672px breakpoint.

--- a/packages/styles/scss/components/footer/_footer-nav.scss
+++ b/packages/styles/scss/components/footer/_footer-nav.scss
@@ -26,10 +26,7 @@
 
       @include carbon--breakpoint('md') {
         border-top: 1px solid $ui-03;
-        padding: 0 $carbon--grid-gutter / 2;
-      }
-
-      @include carbon--breakpoint-between('md', 'lg') {
+        padding-inline: $carbon--grid-gutter / 2;
         padding-top: carbon--mini-units(2);
       }
 
